# strats_center

./: .gitignore  README.md  main.py  pyproject.toml
backtest/: __init__.py  engine.py  simulated_broker.py
broker/: __init__.py  i_broker.py
config/: config.py  strategy_config.yaml
data/: __init__.py  historic_csv_data_handler.py  i_data_handler.py
data/loaders/: __init__.py  binance_csv_loader.py  i_data_loader.py
event_bus/: __init__.py  event_bus.py  exceptions.py  handlers.py
exchange/: __init__.py  i_exchange_connector.py
models/: __init__.py  config.py  enums.py  events.py  exchange_state.py
order_manager/: __init__.py  i_order_manager.py  simple_order_manager.py
portfolio/: __init__.py  i_portfolio.py  simple_portfolio.py
sizing/: __init__.py  fixed_quantity_sizer.py  i_order_sizer.py
strategies/: __init__.py  base_strategy.py  simple_price_strategy.py
tests/: __init__.py  test_config.py  test_data_handler.py  test_data_loader.py  test_enums.py  test_event_bus.py  test_event_bus_integration.py  test_event_handlers.py  test_event_handlers_basic.py  test_events.py  test_integration_data_to_handler.py  test_integration_ent_to_end_simple.py  test_integration_signal_to_order_mapping.py  test_simple_price_strategy.py
